--- a/Admin/Views/Story/Chapter.cshtml
+++ b/Admin/Views/Story/Chapter.cshtml
@@ -31,7 +31,7 @@
                     <input type="text" hidden id="txtIdStory" value="@ViewBag.Id" name="Id" />
                     <div class="form-group col-lg-12 mb-3">
                         <label class="form-label required">Tiêu đề</label>
-                        <input type="text" class="form-control" id="txtTitle" name="Title" />
+                        <textarea class="form-control" id="txtTitle" name="Title"></textarea>
                     </div>
                     <div class="form-group col-lg-12 mb-3">
                         <label class="form-label">Thuộc</label>
