--- a/Admin/Views/Tag/Index.cshtml
+++ b/Admin/Views/Tag/Index.cshtml
@@ -3,10 +3,10 @@
 
 
 @{
-    ViewData["Title"] = "Danh sách tác giả";
+    ViewData["Title"] = "Danh sách thẻ";
 }
 <div class="page-breadcrumb d-none d-sm-flex align-items-center mb-3">
-    <div class="breadcrumb-title pe-3">Tác giả</div>
+    <div class="breadcrumb-title pe-3">Thẻ</div>
     <div class="ps-1">
         <nav aria-label="breadcrumb">
             <ol class="breadcrumb mb-0 p-0">
