--- a/Admin/Views/Shared/_Layout.cshtml
+++ b/Admin/Views/Shared/_Layout.cshtml
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="~/Admin.styles.css" asp-append-version="true" />
     @* Bootstrap-table *@
     <link href="~/lib/bootstrap_table/bootstrap-table.css" rel="stylesheet" />
+    <link href="~/lib/bootstrap_table/dist/extensions/reorder-rows/bootstrap-table-reorder-rows.css" rel="stylesheet" />
     @* AminLTE *@
     <link href="~/lib/adminlte/css/adminlte.min.css" rel="stylesheet" />
     <link href="~/lib/adminlte/fontawesome-free/css/all.min.css" rel="stylesheet" />
@@ -71,6 +72,8 @@
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
 
     <script src="~/lib/bootstrap_table/bootstrap-table.js"></script>
+    <script src="~/lib/jquerytablednd/jquery.tablednd.js"></script>
+    <script src="~/lib/bootstrap_table/dist/extensions/reorder-rows/bootstrap-table-reorder-rows.js"></script>
     <script src="~/asset/select2/select2.min.js"></script>
     <script src="~/asset/ckeditor/ckeditor.js"></script>
     <script src="~/asset/notifications/js/lobibox.js"></script>
