read chapter full

--- a/Website/Views/Story/Details.cshtml
+++ b/Website/Views/Story/Details.cshtml
@@ -22,9 +22,9 @@
             <div class="col-6 col-md-6 col-lg-6">
                 <div class="col-inner">
                     <div class="product-title-container">
-                        <h3 class="product-title product_title entry-title">@Model.Name<</h3>
+                        <h3 class="product-title product_title entry-title">@Model.Name</h3>
                         <div class="is-divider small"></div>
-                        <a href="/Story/Chapter?idSory=@Model.Id" class="btn btn-primary">Đọc truyện</a>
+                        <a href="/Story/Chapter?idStory=@Model.Id&idChapter=0" class="btn btn-primary">Đọc truyện</a>
                     </div>
                 </div>
             </div>
