--- a/Website/Views/Story/Chapter.cshtml
+++ b/Website/Views/Story/Chapter.cshtml
@@ -1,15 +1,35 @@
 ﻿@using StoryManagement.Model.Entity
 @model Chapters
 
+@{
+    Story story = (Story)ViewBag.story;
+}
 <div id="inner" class="mt-5">
-    <a href="/truyen/qidian/1/1040649722/" id="booknameholder" style="font-size: 24px;font-weight: 700;color: gray;display: block;text-align: center;"> Người tại sa ẩn, cố gắng liền có thể trở nên mạnh mẽ </a>
-    <div id="bookchapnameholder" style="color: gray; text-align: center;">Thứ 1 chương Làng Cát</div>
+    <input type="hidden" id="savePrevChapId" value="@ViewBag.PrevChaterId" />
+    <input type="hidden" id="saveNextChapId" value="@ViewBag.NextChapterId" />
+    <a href="/Story/Details?idStory=@story.Id" style="font-size: 24px;font-weight: 700;color: gray;display: block;text-align: center;"> @story.Name </a>
+    <div id="bookchapnameholder" style="color: gray; text-align: center;">@Model.Title</div>
     <br>
     <div class="tm-reader-top-nav" style="background: #eeeeee;font-size: 16px;padding: 6px 0;font-weight: 500">
         <div class="container" style="text-align: center;">
-            <a onclick="blinkloadnextchap(true)" id="navprevtop" href="/truyen/qidian/1/1040649722/0/" style="display: inline-block;float: left;"><i class="fas fa-chevron-left"></i> Chương trước</a>
-            <a id="navcentertop" href="/truyen/qidian/1/1040649722/"> Mục lục </a>
-            <a onclick="blinkloadnextchap()" id="navnexttop" href="/truyen/qidian/1/1040649722/796676993/" style="display: inline-block;float: right;">Chương sau <i class="fas fa-chevron-right"></i></a>
+            @if (ViewBag.PrevChapterId > 0)
+            {
+                <a id="navprevtop" href="/Story/Chapter?idStory=@story.Id&idChapter=@ViewBag.PrevChapterId" style="display: inline-block;float: left;"><i class="fas fa-chevron-left"></i> Chương trước</a>
+            }
+            else
+            {
+                <a id="navprevtop" href="" style="display: none;float: left;"><i class="fas fa-chevron-left"></i> Chương trước</a>
+            }
+            
+            <a id="navcentertop" href="/Story/Details?idStory=@story.Id"> Mục lục </a>
+            @if (ViewBag.NextChapterId > 0)
+            {
+                <a id="navnexttop" href="/Story/Chapter?idStory=@story.Id&idChapter=@ViewBag.NextChapterId" style="display: inline-block;float: right;">Chương sau <i class="fas fa-chevron-right"></i></a>
+            }
+            else
+            {
+                <a id="navnexttop" href="#" style="display: none;float: right;">Chương sau <i class="fas fa-chevron-right"></i></a>
+            }
         </div>
     </div>
     <div id="content-container" class="container" style="min-height: 300px;padding: 0px; margin-top: 30px; margin-bottom: 30px;">
@@ -17,9 +37,25 @@
     </div>
     <div class="tm-reader-top-nav" style="background: #eeeeee;font-size: 16px;padding: 6px 0;font-weight: 500">
         <div class="container" style="text-align: center;">
-            <a onclick="blinkloadnextchap(true)" id="navprevtop" href="/truyen/qidian/1/1040649722/0/" style="display: inline-block;float: left;"><i class="fas fa-chevron-left"></i> Chương trước</a>
+            @if (ViewBag.PrevChapterId > 0)
+            {
+                <a id="navprevtop" href="/Story/Chapter?idStory=@story.Id&idChapter=@ViewBag.PrevChapterId" style="display: inline-block;float: left;"><i class="fas fa-chevron-left"></i> Chương trước</a>
+            }
+            else
+            {
+                <a id="navprevtop" href="" style="display: none;float: left;"><i class="fas fa-chevron-left"></i> Chương trước</a>
+            }
+            @* <a id="navprevtop" href="/Story/Chapter?idStory=@story.Id&idChapter=@ViewBag.PrevChapterId" style="display: inline-block;float: left;"><i class="fas fa-chevron-left"></i> Chương trước</a> *@
             <a id="navcentertop" href="/truyen/qidian/1/1040649722/"> Mục lục </a>
-            <a onclick="blinkloadnextchap()" id="navnexttop" href="/truyen/qidian/1/1040649722/796676993/" style="display: inline-block;float: right;">Chương sau <i class="fas fa-chevron-right"></i></a>
+            @* <a id="navnexttop" href="/Story/Chapter?idStory=@story.Id&idChapter=@ViewBag.NextChapterId" style="display: inline-block;float: right;">Chương sau <i class="fas fa-chevron-right"></i></a> *@
+            @if (ViewBag.NextChapterId > 0)
+            {
+                <a id="navnexttop" href="/Story/Chapter?idStory=@story.Id&idChapter=@ViewBag.NextChapterId" style="display: inline-block;float: right;">Chương sau <i class="fas fa-chevron-right"></i></a>
+            }
+            else
+            {
+                <a id="navnexttop" href="#" style="display: none;float: right;">Chương sau <i class="fas fa-chevron-right"></i></a>
+            }
         </div>
     </div>
 </div>
