--- a/Admin/Views/Shared/_Layout.cshtml
+++ b/Admin/Views/Shared/_Layout.cshtml
@@ -74,11 +74,13 @@
     <script src="~/lib/bootstrap_table/bootstrap-table.js"></script>
     <script src="~/lib/jquerytablednd/jquery.tablednd.js"></script>
     <script src="~/lib/bootstrap_table/dist/extensions/reorder-rows/bootstrap-table-reorder-rows.js"></script>
+    <script src="~/lib/bootstrap_table/dist/extensions/reorder-rows/bootstrap-table-reorder-rows.min.js"></script>
     <script src="~/asset/select2/select2.min.js"></script>
     <script src="~/asset/ckeditor/ckeditor.js"></script>
     <script src="~/asset/notifications/js/lobibox.js"></script>
     <script src="~/asset/notifications/js/lobibox.min.js"></script>
     <script src="~/asset/jquery-confirm/js/jquery-confirm.js"></script>
+    <script src="~/lib/sortablejs/sortable.min.js"></script>
 
     <script src="~/lib/adminlte/js/adminlte.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
