--- a/Website/Views/Home/Index.cshtml
+++ b/Website/Views/Home/Index.cshtml
@@ -16,7 +16,7 @@
                 border-top-right-radius: 16px;
               ">
                 <div style="font-size: 20px; margin: 20px 0; border-top: 5px solid #394589;">
-                    Được nhiều Like &gt;
+                    Tất cả truyện &gt;
                 </div>
                 <div class="row book-grid">
                     @if (ViewBag.listStory != null && ViewBag.listStory.Count > 0)
@@ -39,6 +39,80 @@
                         }
                     }
                     
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="tmc-home-section"
+                 style="
+                color: black;
+                font-size: 14px;
+                padding: 0 15px;
+                width: 100%;
+                border-top-left-radius: 16px;
+                border-top-right-radius: 16px;
+              ">
+                <div style="font-size: 20px; margin: 20px 0; border-top: 5px solid #394589;">
+                    Mới nhất &gt;
+                </div>
+                <div class="row book-grid">
+                    @if (ViewBag.listNewest != null && ViewBag.listNewest.Count > 0)
+                    {
+                        foreach (Story str in ViewBag.listNewest)
+                        {
+                            <a class="col-lg-2 col-md-3 col-sm-3 col-4 cap"
+                               href="/Story/Details?idStory=@str.Id">
+                                <div class="bookthumb">
+                                    <img loading="lazy"
+                                         referrerpolicy="no-referrer"
+                                         src="https://bookcover.yuewen.com/qdbimg/349573/1040874138/300" />
+                                </div>
+                                <div class="nameSto" title="@str.Name">
+                                    <b style="line-height: 1.5; display: block; margin: 8px 0" id="nameSto">
+                                        @str.Name
+                                    </b>
+                                </div>
+                            </a>
+                        }
+                    }
+
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="tmc-home-section"
+                 style="
+                color: black;
+                font-size: 14px;
+                padding: 0 15px;
+                width: 100%;
+                border-top-left-radius: 16px;
+                border-top-right-radius: 16px;
+              ">
+                <div style="font-size: 20px; margin: 20px 0; border-top: 5px solid #394589;">
+                    Cập nhật gần nhất &gt;
+                </div>
+                <div class="row book-grid">
+                    @if (ViewBag.listLastUpdate != null && ViewBag.listLastUpdate.Count > 0)
+                    {
+                        foreach (Story str in ViewBag.listLastUpdate)
+                        {
+                            <a class="col-lg-2 col-md-3 col-sm-3 col-4 cap"
+                               href="/Story/Details?idStory=@str.Id">
+                                <div class="bookthumb">
+                                    <img loading="lazy"
+                                         referrerpolicy="no-referrer"
+                                         src="https://bookcover.yuewen.com/qdbimg/349573/1040874138/300" />
+                                </div>
+                                <div class="nameSto" title="@str.Name">
+                                    <b style="line-height: 1.5; display: block; margin: 8px 0" id="nameSto">
+                                        @str.Name
+                                    </b>
+                                </div>
+                            </a>
+                        }
+                    }
+
                 </div>
             </div>
         </div>
