--- a/Website/Views/Story/Chapter.cshtml
+++ b/Website/Views/Story/Chapter.cshtml
@@ -32,7 +32,7 @@
             }
         </div>
     </div>
-    <div id="content-container" class="container" style="min-height: 300px;padding: 0px; margin-top: 30px; margin-bottom: 30px;">
+    <div id="content-container" class="container" style="min-height: 300px;padding: 0px; margin-top: 30px; margin-bottom: 30px; font-size: 18px;">
         @Html.Raw(Model.Content)
     </div>
     <div class="tm-reader-top-nav" style="background: #eeeeee;font-size: 16px;padding: 6px 0;font-weight: 500">
