--- a/Website/Views/Story/Details.cshtml
+++ b/Website/Views/Story/Details.cshtml
@@ -5,6 +5,7 @@
     ViewData["Title"] = "Thông tin truyện";
     List<Tags> tags = (List<Tags>)ViewBag.listTags;
     List<Authors> authors = (List<Authors>)ViewBag.listAuthors;
+    Reviews reviews = (Reviews)ViewBag.review;
 }
 <div class="inner">
     <div class="container">
@@ -51,38 +52,21 @@
                     <div class="navtab border border-1" data-target="listChapter">Chương</div>
                     <div class="navtab border border-1" data-target="rating">Đánh giá</div>
                     <div class="navtab border border-1" data-target="series">Series</div>
-                    <div class="navtab border border-1" data-target="page5">Page5</div>
-                    <div class="navtab border border-1" data-target="page6">Page6</div>
-                    <div class="navtab border border-1" data-target="page7">Page7</div>
                 </div>
                 <div class="tabcontent border border-1">
                     <div id="review" class="content active">
-                        <h1>Welcome to the Home Page</h1>
-                        <p>This is the home section.</p>
+                        @Html.Raw(reviews.Opening)
                     </div>
                     <div id="listChapter" class="content">
                         <h1>About Us</h1>
                         <p>This is the about section.</p>
                     </div>
                     <div id="rating" class="content">
-                        <h1>Contact Us</h1>
-                        <p>This is the contact section.</p>
+                        @Html.Raw(reviews.Review)
                     </div>
                     <div id="series" class="content">
                         <h1>Page 4</h1>
                         <p>This is the page 4 section.</p>
-                    </div>
-                    <div id="page5" class="content">
-                        <h1>Page 5</h1>
-                        <p>This is the page 5 section.</p>
-                    </div>
-                    <div id="page6" class="content">
-                        <h1>Page 6</h1>
-                        <p>This is the page 6 section.</p>
-                    </div>
-                    <div id="page7" class="content">
-                        <h1>Page 7</h1>
-                        <p>This is the page 7 section.</p>
                     </div>
                 </div>
             </div>
