--- a/Website/Views/Shared/_Layout.cshtml
+++ b/Website/Views/Shared/_Layout.cshtml
@@ -12,6 +12,8 @@
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/Website.styles.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/Controller/@(controller).css" asp-append-version="true" />
+    @* Bootstrap-table *@
+    <link href="~/lib/bootstrap_table/bootstrap-table.css" rel="stylesheet" />
 </head>
 <body>
     <div id="full">
@@ -31,6 +33,7 @@
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
+    <script src="~/lib/bootstrap_table/bootstrap-table.js"></script>
     <script src="~/js/@(controller).js" asp-append-version="true"></script>
     @await RenderSectionAsync("Scripts", required: false)
 </body>
