--- a/Admin/Views/Story/Index.cshtml
+++ b/Admin/Views/Story/Index.cshtml
@@ -65,7 +65,7 @@
                         <button type="button" id="btnSearch" class="btn btn-primary btn-xs mr-5"><i class="fas fa-search"></i></button>
                     </div>
                 </div>
-                <div class="col-lg-12 table-responsive">
+                <div class="col-lg-12 table-responsive" style="height: 500px;">
                     <table class="table table-bordered" id="tblStory"></table>
                 </div>
             </div>
