--- a/Admin/Views/Author/Index.cshtml
+++ b/Admin/Views/Author/Index.cshtml
@@ -31,7 +31,7 @@
                     <div class="col-lg-3">
                         <input type="text" class="form-control" id="txtSearch" placeholder="Tìm kiếm tác giả" />
                     </div>
-                <div class="col-lg-12 table-responsive">
+                    <div class="col-lg-12 table-responsive" style="height: 480px;">
                     <table class="table table-bordered" id="tblAuthor"></table>
                 </div>
             </div>
