--- a/Admin/Views/Shared/_nav.cshtml
+++ b/Admin/Views/Shared/_nav.cshtml
@@ -45,6 +45,22 @@
                         </p>
                     </a>
                 </li>
+                <li class="nav-item">
+                    <a href="/Author" class="nav-link">
+                        <i class="nav-icon fas fa-scissors"></i>
+                        <p>
+                            Scene
+                        </p>
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a href="/Author" class="nav-link">
+                        <i class="nav-icon fas fa-film"></i>
+                        <p>
+                            Series
+                        </p>
+                    </a>
+                </li>
             </ul>
         </nav>
         <!-- /.sidebar-menu -->
