--- a/Admin/Views/Author/Index.cshtml
+++ b/Admin/Views/Author/Index.cshtml
@@ -28,8 +28,11 @@
         <div class="card">
             <div class="card-body">
                 <div class="row mb-3">
-                    <div class="col-lg-3">
+                    <div class="col-lg-3 mb-3">
                         <input type="text" class="form-control" id="txtSearch" placeholder="Tìm kiếm tác giả" />
+                    </div>
+                    <div class="col-lg-1">
+                        <button type="button" id="btnSearch" class="btn btn-primary btn-xs mr-5"><i class="fas fa-search"></i></button>
                     </div>
                     <div class="col-lg-12 table-responsive" style="height: 480px;">
                     <table class="table table-bordered" id="tblAuthor"></table>
