--- a/Admin/Views/Shared/_nav.cshtml
+++ b/Admin/Views/Shared/_nav.cshtml
@@ -47,7 +47,7 @@
                 </li>
                 <li class="nav-item">
                     <a href="/Author" class="nav-link">
-                        <i class="nav-icon fas fa-scissors"></i>
+                        <i class="nav-icon fas fa-video"></i>
                         <p>
                             Scene
                         </p>
