--- a/Admin/Views/Story/Index.cshtml
+++ b/Admin/Views/Story/Index.cshtml
@@ -84,11 +84,11 @@
                     <input type="text" hidden id="txtIdModal" name="Id" />
                     <div class="form-group mb-3">
                         <label class="form-label required">Tên truyện</label>
-                        <input type="text" class="form-control" id="txtName" name="Name" />
+                        <input type="text" class="form-control" id="txtName" name="Name" style="height: 50px;" />
                     </div>
                     <div class="form-group mb-3">
                         <label class="form-label">Chương truyện</label>
-                        <input type="text" class="form-control" name="NumberChapter" id="txtNumberChapter" />
+                        <input type="text" class="form-control" name="NumberChapter" id="txtNumberChapter" style="height: 50px;" />
                     </div>
                     <div class="form-group mb-3">
                         <div class="row">
