--- a/Admin/Views/Story/Index.cshtml
+++ b/Admin/Views/Story/Index.cshtml
@@ -88,8 +88,12 @@
                         <textarea class="form-control" name="NumberChapter" id="txtNumberChapter"></textarea>
                     </div>
                     <div class="form-group mb-3">
+                        <label class="form-label">Tag</label>
+                        <textarea class="form-control" name="TagName" id="txtTagName"></textarea>
+                    </div>
+                    @* <div class="form-group mb-3">
                         <div class="row">
-                            @* <div class="col">
+                            <div class="col">
                                 <label class="form-label">Trạng thái</label>
                                 <select class="form-control" id="idStatus" name="Status">
                                     @{
@@ -99,7 +103,7 @@
                                         }
                                     }
                                 </select>
-                            </div> *@
+                            </div>
                             <div class="col-1"></div>
                             <div class="col-4">
                                 <label class="form-label">Đã đọc?</label><br/>
@@ -107,16 +111,17 @@
                             </div>
                             <div class="col-4">
                                 <label class="form-label">File tổng hợp (hệ liệt)?</label><br/>
-                                <input class="form-check-input ms-2" type="checkbox" name="IsCollection" id="ckRead"/>
+                                <input class="form-check-input ms-2" type="checkbox" name="IsCollection" id="IsCollection" />
                             </div>
                         </div>
-                    </div>
+                    </div> *@
                     <div class="form-group mb-3">
                         <label class="form-label">Nguồn</label>
                         <select class="form-select" id="sources" name="sources">
                             <option value="SacHiepVien">SacHiepVien</option>
                             <option value="SangTacViet">SangTacViet</option>
                             <option value="Wattpad">Wattpad</option>
+                            <option value="HacDong">HacDong</option>
                             <option value="Other">Khác</option>
                         </select>
                     </div>
