--- a/Admin/Views/Shared/_nav.cshtml
+++ b/Admin/Views/Shared/_nav.cshtml
@@ -1,8 +1,8 @@
 ﻿<aside class="main-sidebar sidebar-dark-primary elevation-4">
     <!-- Brand Logo -->
     <a href="../../index3.html" class="brand-link">
-        <img src="~/Images/logo.png" alt="AdminLTE Logo" class="brand-image img-circle elevation-3" style="opacity: .8">
-        <span class="brand-text font-weight-light">Ad</span>
+        @* <img src="~/Images/logo.png" alt="AdminLTE Logo" class="brand-image img-circle elevation-3" style="opacity: .8"> *@
+        <span class="brand-text font-weight-light">Administrator</span>
     </a>
 
     <!-- Sidebar -->
@@ -11,8 +11,6 @@
         <!-- Sidebar Menu -->
         <nav class="mt-2">
             <ul class="nav nav-pills nav-sidebar flex-column" data-widget="treeview" role="menu" data-accordion="false">
-                <!-- Add icons to the links using the .nav-icon class
-                     with font-awesome or any other icon font library -->
                 <li class="nav-item">
                     <a href="/Home" class="nav-link">
                         <i class="nav-icon fas fa-tachometer-alt"></i>
@@ -23,23 +21,44 @@
                 </li>
                 <li class="nav-item">
                     <a href="/Story" class="nav-link">
-                        <i class="nav-icon fas fa-th"></i>
+                        <i class="nav-icon fas fa-book"></i>
                         <p>
                             Truyện
                         </p>
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a href="Tag" class="nav-link">
-                        <i class="nav-icon fas fa-copy"></i>
+                    <a href="#" class="nav-link">
+                        <i class="nav-icon fas fa-tags"></i>
                         <p>
-                            Thẻ
+                            Quản lý thẻ
+                            <i class="right fas fa-angle-left"></i>
                         </p>
                     </a>
+                    <ul class="nav nav-treeview">
+                        <li class="nav-item">
+                            <a href="/TagGroup" class="nav-link">
+                                <i class="far fa-layer-group nav-icon"></i>
+                                <p>Nhóm thẻ</p>
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a href="/Tag" class="nav-link">
+                                <i class="far fa-tag nav-icon"></i>
+                                <p>Thẻ</p>
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a href="/SubTag" class="nav-link">
+                                <i class="far fa-tags nav-icon"></i>
+                                <p>Thẻ phụ</p>
+                            </a>
+                        </li>
+                    </ul>
                 </li>
                 <li class="nav-item">
                     <a href="/Author" class="nav-link">
-                        <i class="nav-icon fas fa-chart-pie"></i>
+                        <i class="nav-icon fas fa-user-edit"></i>
                         <p>
                             Tác giả
                         </p>
@@ -47,7 +66,7 @@
                 </li>
                 <li class="nav-item">
                     <a href="/Author" class="nav-link">
-                        <i class="nav-icon fas fa-video"></i>
+                        <i class="nav-icon fas fa-photo-video"></i>
                         <p>
                             Scene
                         </p>
