Update CRUD Tag and SubTag

--- a/Admin/Views/Shared/_nav.cshtml
+++ b/Admin/Views/Shared/_nav.cshtml
@@ -37,7 +37,7 @@
                     </a>
                     <ul class="nav nav-treeview">
                         <li class="nav-item">
-                            <a href="/TagGroup" class="nav-link">
+                            <a href="/GroupTag" class="nav-link">
                                 <i class="far fa-layer-group nav-icon"></i>
                                 <p>Nhóm thẻ</p>
                             </a>
