--- a/Admin/Views/SubTag/Index.cshtml
+++ b/Admin/Views/SubTag/Index.cshtml
@@ -28,7 +28,7 @@
         <div class="card">
             <div class="card-body">
                 <div class="row mb-3">
-                    <div class="col-lg-3">
+                    <div class="col-lg-3 mb-3">
                         <input type="text" class="form-control" id="txtSearch" placeholder="Tìm kiếm thẻ" />
                     </div>
                     <div class="col-lg-12 table-responsive">
