--- a/Admin/Views/Shared/_nav.cshtml
+++ b/Admin/Views/Shared/_nav.cshtml
@@ -38,19 +38,19 @@
                     <ul class="nav nav-treeview">
                         <li class="nav-item">
                             <a href="/GroupTag" class="nav-link">
-                                <i class="far fa-layer-group nav-icon"></i>
+                                <i class="fas fa-layer-group nav-icon"></i>
                                 <p>Nhóm thẻ</p>
                             </a>
                         </li>
                         <li class="nav-item">
                             <a href="/Tag" class="nav-link">
-                                <i class="far fa-tag nav-icon"></i>
+                                <i class="fas fa-tag nav-icon"></i>
                                 <p>Thẻ</p>
                             </a>
                         </li>
                         <li class="nav-item">
                             <a href="/SubTag" class="nav-link">
-                                <i class="far fa-tags nav-icon"></i>
+                                <i class="fas fa-sitemap nav-icon"></i>
                                 <p>Thẻ phụ</p>
                             </a>
                         </li>
