--- a/Admin/Views/Shared/_Layout.cshtml
+++ b/Admin/Views/Shared/_Layout.cshtml
@@ -23,7 +23,7 @@
     <link href="~/asset/notifications/css/lobibox.min.css" rel="stylesheet" />
     @* Jquery-confirm *@
     <link href="~/asset/jquery-confirm/css/jquery-confirm.css" rel="stylesheet" />
-
+    <link href="~/css/@(controller).css?v=@DateTime.UtcNow.ToString()" rel="stylesheet" />
 </head>
 <body class="hold-transition sidebar-mini">
     <div class="wrapper">
