--- a/Admin/Views/Story/Index.cshtml
+++ b/Admin/Views/Story/Index.cshtml
@@ -3,7 +3,7 @@
 
 @{
     ViewData["Title"] = "Danh sách truyện";
-    var lstTags = (List<Tags>)ViewBag.lstTag;
+    // var lstTags = (List<Tags>)ViewBag.lstTag;
     // var lstAuthors = (List<Authors>)ViewBag.lstAuthor;
     // var listType = Enum.GetValues(typeof(StatusStory)).Cast<StatusStory>().Select(v => new SelectListItem
     //         {
@@ -39,19 +39,10 @@
                     </div>
                     <div class="col-lg-3">
                         <select class="form-select" id="sltTag" multiple>
-                            <option value="0">--Tất cả thể loại--</option>
-                            @if (lstTags != null && lstTags.Count > 0)
-                            {
-                                foreach (var item in lstTags)
-                                {
-                                    <option value="@item.Id">@item.Name</option>
-                                }
-                            }
                         </select>
                     </div>
                     <div class="col-lg-3">
                         <select class="form-select" id="sltAuthor" multiple>
-                            <option value="0">--Tất cả tác giả--</option>
                         </select>
                     </div>
                     <div class="col-lg-1">
@@ -61,6 +52,8 @@
                     <div class="col-lg-1">
                         <button type="button" id="btnSearch" class="btn btn-primary btn-sm mr-5"><i class="fas fa-search"></i></button>
                     </div>
+                    <div class="col-lg-5" style="max-height: 240px;overflow-y: scroll;" id="tagSelected"></div>
+                    <div class="col-lg-5" style="max-height: 240px;overflow-y: scroll;" id="authorSelected"></div>
                 </div>
                 <div class="col-lg-12 table-responsive" style="height: 480px;">
                     <table class="table table-bordered" id="tblStory"></table>
@@ -87,10 +80,13 @@
                         <label class="form-label">Chương truyện</label>
                         <textarea class="form-control" name="NumberChapter" id="txtNumberChapter"></textarea>
                     </div>
-                    <div class="form-group mb-3">
-                        <label class="form-label">Tag</label>
-                        <textarea class="form-control" name="TagName" id="txtTagName"></textarea>
-                    </div>
+                    @* <div class="form-group mb-3">
+                        <label class="form-label">Ảnh bìa</label>
+                        <input class="form-control" type="file" id="txtImage" name="Image" accept="image/*" />
+                        <div class="mt-2">
+                            <img id="previewImage" src="#" alt="Preview ảnh" style="max-width: 210px; max-height: 280px; display: none; border: 1px solid #ddd; padding: 4px; border-radius: 6px;" />
+                        </div>
+                    </div> *@
                     @* <div class="form-group mb-3">
                         <div class="row">
                             <div class="col">
@@ -122,31 +118,23 @@
                             <option value="SangTacViet">SangTacViet</option>
                             <option value="Wattpad">Wattpad</option>
                             <option value="HacDong">HacDong</option>
+                            <option value="AI">AI</option>
                             <option value="Other">Khác</option>
                         </select>
                     </div>
                     <div class="form-group mb-3">
                         <label class="form-label">Thẻ</label>
                         <select class="form-select" id="sltFormTag" multiple name="ListTag">
-                            @if (lstTags != null && lstTags.Count > 0)
-                            {
-                                foreach (var item in lstTags)
-                                {
-                                    <option value="@item.Id">@item.Name</option>
-                                }
-                            }
+                        </select>
+                    </div>
+                    <div class="form-group mb-3">
+                        <label class="form-label">Thẻ phụ</label>
+                        <select class="form-select" id="sltFormSubTag" multiple name="ListSubTag">
                         </select>
                     </div>
                     <div class="form-group mb-3">
                         <label class="form-label">Tác giả</label>
                         <select class="form-select" id="sltFormAuthor" multiple name="ListAuthor">
-                            @* @if (lstAuthors != null && lstAuthors.Count > 0)
-                            {
-                                foreach (var item in lstAuthors)
-                                {
-                                    <option value="@item.Id">@item.Pseudonym</option>
-                                }
-                            } *@
                         </select>
                     </div>
                 </form>
