--- a/Admin/Views/Review/Index.cshtml
+++ b/Admin/Views/Review/Index.cshtml
@@ -23,7 +23,7 @@
         </div>
         <div class="mt-4">
             <button class="btn btn-success  " style="width:100px;" type="submit" id="Save">Lưu</button>
-            <a href="/Home" class="btn w-md btn-outline-info waves-effect waves-light">Quay lại</a>
+            <a href="/Review/index?idStory=@Model.IdStory" class="btn w-md btn-outline-info waves-effect waves-light">Quay lại</a>
         </div>
     </form>
 </div>
