--- a/Admin/Views/Story/Index.cshtml
+++ b/Admin/Views/Story/Index.cshtml
@@ -69,7 +69,7 @@
                         <ul class="lst-author list-unstyled d-flex flex-wrap gap-2"></ul>
                     </div>
                 </div>
-                <div class="col-lg-12 table-responsive" style="height: 520px;">
+                <div class="col-lg-12 table-responsive" style="height: 600px;">
                     <table class="table table-bordered" id="tblStory"></table>
                 </div>
             </div>
@@ -88,43 +88,12 @@
                     <input type="text" hidden id="txtIdModal" name="Id" />
                     <div class="form-group mb-3">
                         <label class="form-label required">Tên truyện</label>
-                        <textarea class="form-control" name="txtName" id="txtName"></textarea>
+                        <textarea rows="3" class="form-control" name="txtName" id="txtName"></textarea>
                     </div>
                     <div class="form-group mb-3">
                         <label class="form-label">Chương truyện</label>
-                        <textarea class="form-control" name="NumberChapter" id="txtNumberChapter"></textarea>
+                        <textarea rows="6" class="form-control" name="NumberChapter" id="txtNumberChapter"></textarea>
                     </div>
-                    @* <div class="form-group mb-3">
-                        <label class="form-label">Ảnh bìa</label>
-                        <input class="form-control" type="file" id="txtImage" name="Image" accept="image/*" />
-                        <div class="mt-2">
-                            <img id="previewImage" src="#" alt="Preview ảnh" style="max-width: 210px; max-height: 280px; display: none; border: 1px solid #ddd; padding: 4px; border-radius: 6px;" />
-                        </div>
-                    </div> *@
-                    @* <div class="form-group mb-3">
-                        <div class="row">
-                            <div class="col">
-                                <label class="form-label">Trạng thái</label>
-                                <select class="form-control" id="idStatus" name="Status">
-                                    @{
-                                        foreach (var item in listType)
-                                        {
-                                            <option value="@item.Value">@item.Text</option>
-                                        }
-                                    }
-                                </select>
-                            </div>
-                            <div class="col-1"></div>
-                            <div class="col-4">
-                                <label class="form-label">Đã đọc?</label><br/>
-                                <input class="form-check-input ms-2" type="checkbox" name="IsRead" id="ckRead"/>
-                            </div>
-                            <div class="col-4">
-                                <label class="form-label">File tổng hợp (hệ liệt)?</label><br/>
-                                <input class="form-check-input ms-2" type="checkbox" name="IsCollection" id="IsCollection" />
-                            </div>
-                        </div>
-                    </div> *@
                     <div class="form-group mb-3">
                         <label class="form-label">Nguồn</label>
                         <select class="form-select" id="sources" name="sources">
