--- a/Admin/wwwroot/css/site.css
+++ b/Admin/wwwroot/css/site.css
@@ -35,7 +35,7 @@ body {
 .tag {
     background: #eee;
     border-radius: 3px 0 0 3px;
-    color: #999;
+    color: black;
     display: inline-block;
     height: 26px;
     line-height: 26px;
