--- a/Admin/Views/Series/Index.cshtml
+++ b/Admin/Views/Series/Index.cshtml
@@ -2,18 +2,17 @@
 @using StoryManagement.Model.Enum
 
 @{
-    ViewData["Title"] = "Chương truyện";
-    Story story = (Story)ViewBag.getStory;
+    ViewData["Title"] = "Series truyện";
 }
 <div class="page-breadcrumb d-none d-sm-flex align-items-center mb-3">
-    <div class="breadcrumb-title pe-3">Truyện</div>
+    <div class="breadcrumb-title pe-3">Series</div>
     <div class="ps-3">
         <nav aria-label="breadcrumb">
             <ol class="breadcrumb mb-0 p-0">
                 <li class="breadcrumb-item">
                     <a href="/"><i class="bx bx-home-alt"></i></a>
                 </li>
-                <li class="breadcrumb-item active" aria-current="page">@story.Name</li>
+                <li class="breadcrumb-item active" aria-current="page">Danh sách series</li>
             </ol>
         </nav>
     </div>
@@ -27,17 +26,19 @@
     <div class="col-lg-12">
         <div class="card">
             <div class="card-body">
-                <div class="col-lg-12 table-responsive">
-                    <input type="hidden" value="@ViewBag.StoryId" id="saveStoryId" />
-                    <table class="table table-bordered" id="tblChapter"></table>
+                <div class="row mb-3">
+                    <div class="col-lg-3">
+                        <input type="text" class="form-control" id="txtSearch" placeholder="Tìm kiếm tên" />
+                    </div>
+                    <div class="col-lg-1">
+                        <button type="button" id="btnSearch" class="btn btn-primary btn-sm mr-5"><i class="fas fa-search"></i></button>
+                    </div>
+                </div>
+                <div class="col-lg-12 table-responsive" style="height: 600px;">
+                    <table class="table table-bordered" id="tblSeries"></table>
                 </div>
             </div>
         </div>
     </div>
 </div>
-@* @section Scripts {
-    <script>
-        CKEDITOR.replace('txtReview');
-    </script>
-} *@
 
