--- a/Admin/Views/Shared/_nav.cshtml
+++ b/Admin/Views/Shared/_nav.cshtml
@@ -73,7 +73,7 @@
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a href="/Author" class="nav-link">
+                    <a href="/Series" class="nav-link">
                         <i class="nav-icon fas fa-film"></i>
                         <p>
                             Series
