--- a/Admin/Views/Shared/_nav.cshtml
+++ b/Admin/Views/Shared/_nav.cshtml
@@ -30,7 +30,7 @@
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a href="Tag" class="nav-link">
+                    <a href="/Tag" class="nav-link">
                         <i class="nav-icon fas fa-copy"></i>
                         <p>
                             Thẻ
